--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">SmartWeChat</string>
+    <string name="host_url">www.randyGo.tk</string>
+    <string name="service_label">auto click Red Packet</string>
+    <string name="accessibility_service_description">This service helps you click Red Packet on WeChat Automatically</string>
 </resources>
