--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="host_url">www.randyGo.tk</string>
     <string name="service_label">auto click Red Packet</string>
     <string name="accessibility_service_description">This service helps you click Red Packet on WeChat Automatically</string>
+    <string name="open_settings">open settings</string>
+    <string name="start_service">start service</string>
+    <string name="stop_service">stop service</string>
 </resources>
