--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,11 @@
 <resources>
-    <string name="app_name">SmartWeChat</string>
+    <string name="app_name">红包间谍</string>
     <string name="host_url">www.randyGo.tk</string>
-    <string name="service_label">auto click Red Packet</string>
-    <string name="accessibility_service_description">This service helps you click Red Packet on WeChat Automatically</string>
-    <string name="save">save</string>
-    <string name="reset">reset</string>
-    <string name="open">open settings</string>
+    <string name="service_label">自动打开红包</string>
+    <string name="accessibility_service_description">开启本服务可帮你自动打开微信红包</string>
+    <string name="save">保存</string>
+    <string name="reset">默认</string>
+    <string name="open">设置窗口</string>
     <string name="new_friends">新的朋友</string>
     <string name="saved_groups">群聊</string>
     <string name="get_lucky_money">领取红包</string>
